tests/build/fail/widget/module_path_missing_dollar_sign.rs
use zero_ui::core::widget2;

// doesn't start with $
#[widget2(crate::widget)]
pub mod widget {}

fn main() {}
